Added basic logger! Put everything about players in the sam class!